[tool.poetry]
name = "papel"
version = "0.2.0"
description = "Docker based tool to deploy APIs and data pipelines."
authors = ["Pierre-Edouard Barrault"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"   # pinned after fastapi docker image
aiofiles = "==0.7.0"
celery = "==5.2.0"
# TODO: check jinja update
Jinja2 = "==3.0.3"
numpy = "==1.21.4"
pydantic = "==1.8.2"
psycopg2-binary = "==2.9.2"
python-dotenv = "==0.19.2"
requests = "==2.26.0"
typing = "==3.7.4.3"

[tool.poetry.dev-dependencies]
pytest = "==6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # TODO: remove once Jinja is updated
    "ignore:'contextfunction' is renamed to 'pass_context', the old name will be removed in Jinja 3.1.:DeprecationWarning",
]
